# simaromur

./: .gitignore  .gitmodules  LICENSE  LICENSE-APACHE2  LICENSE-CMU.txt  Readme.md  appstore_descriptions.md  appstore_descriptions.txt  build.gradle  gradle.properties  settings.gradle
.github/linters/: sun_checks.xml
.github/scripts/: dl_3rdparty.sh
.github/workflows/: build.yaml  codeql-analysis.yml  linter.yml
app/: build.gradle  gson.pro  proguard-rules.pro
app/schemas/com.grammatek.simaromur.db.ApplicationDb/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
app/src/androidTest/java/com/grammatek/simaromur/: ExampleInstrumentedTest.java  G2PTest.java  UtteranceCacheManagerTest.java
app/src/debug/: google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: config.properties
app/src/main/assets/audio/: connection_problem_dora.pcm  service_not_available_dora.pcm
app/src/main/assets/g2p/: common.far  g2p.far
app/src/main/assets/voices/: lvl_is_phoneme_alfur-0_0_1.flitevox  mel_postnet.input-0_0_1.pt  voice-info.json
app/src/main/cpp/: CMakeLists.txt  edu_cmu_cs_speech_tts_flite_engine.cc  edu_cmu_cs_speech_tts_flite_service.cc  edu_cmu_cs_speech_tts_flite_voices.cc  edu_cmu_cs_speech_tts_flite_voices.h  edu_cmu_cs_speech_tts_logging.h
app/src/main/cpp/flite/: CMakeLists.txt  FliteDriver.cpp  FliteDriver.h  FliteService.cpp  Logger.cpp  Logger.h  voice_driver.h
app/src/main/cpp/g2p/: CMakeLists.txt  G2P.cpp  G2P.h  G2PService.cpp  G2PService.h  Logger.cpp  Logger.h  rewrite-tester-utils.cc  rewrite-tester-utils.h  utildefs.cc  utildefs.h
app/src/main/cpp/tts/: tts.h
app/src/main/java/com/grammatek/simaromur/: ApiDbUtil.java  App.java  AppRepository.java  CheckFliteVoiceData.java  CheckSimVoices.java  CheckVoiceData.java  DownloadVoiceData.java  EmailFeedback.java  FileDownloader.java  FileUtils.java  Flite.java  FliteInfoViewer.java  FliteManager.java  FliteTtsService.java  GetSampleText.java  InfoViewer.java  MediaPlayObserver.java  NativeFliteTTS.java  NativeG2P.java  NormDictInfo.java  NormDictListAdapter.java  NormDictListView.java  NormDictViewModel.java  Simaromur.java  TTSDemo.java  TTSManager.java  TTSObserver.java  TTSProcessingResult.java  TTSRequest.java  TTSService.java  Utility.java  Utterance.java  Voice.java  VoiceInfo.java  VoiceListAdapter.java  VoiceManager.java  VoiceMoreDialogFragment.java  VoiceViewModel.java
app/src/main/java/com/grammatek/simaromur/audio/: AudioManager.java  AudioObserver.java
app/src/main/java/com/grammatek/simaromur/cache/: UtteranceCacheManager.java  UtteranceCacheSerializer.java
app/src/main/java/com/grammatek/simaromur/db/: AppData.java  AppDataDao.java  AppRepository.java  ApplicationDb.java  NormDictEntry.java  NormDictEntryDao.java  TimestampConverter.java  Voice.java  VoiceDao.java
app/src/main/java/com/grammatek/simaromur/device/: AssetVoiceManager.java  DownloadVoiceManager.java  NativeG2P.java  SymbolsLvLIs.java  TTSAudioControl.java  TTSEngine.java  TTSEngineController.java  TTSEngineFlite.java  TTSEngineOnnx.java  TTSEnginePyTorch.java  TTSEngineTensorFlow.java
app/src/main/java/com/grammatek/simaromur/frontend/: Abbreviations.java  CardinalBigTuples.java  CardinalMillionTuples.java  CardinalOnesTuples.java  CardinalThousandTuples.java  CategoryTuple.java  DecimalThousandTuples.java  ExpansionTuple.java  FractionTuples.java  FrontendManager.java  NormalizationDictionaries.java  NormalizationManager.java  NumberHelper.java  NumberPatterns.java  OrdinalOnesTuples.java  (+19 more)
app/src/main/proto/: utterance_cache.proto
app/src/main/res/drawable/: ic_baseline_delete_forever_24.xml  ic_cloud_checked_solid.xml  ic_cloud_playing_solid.xml  ic_cloud_unavailable_solid.xml  ic_fluent_checkmark_48_regular.xml  ic_fluent_delete_48_regular.xml  ic_fluent_pause_circle_48_regular.xml  ic_fluent_play_circle_48_regular.xml  launch_screen.xml  play_drawable.xml  transparent_bg_bordered.xml  transparent_bg_bordered_button.xml
app/src/main/res/layout/: about_list_item.xml  about_list_item_cache.xml  about_list_item_clickable.xml  about_list_item_switch.xml  about_list_title.xml  activity_info.xml  activity_norm_dict_info.xml  activity_norm_dict_list_view.xml  activity_progress_bar.xml  activity_progress_bar_indeterminate.xml  activity_tts_demo.xml  activity_voice_info.xml  activity_voice_manager.xml  content_norm_dict_list_view.xml  content_voice_manager.xml  dashboard_icon.xml  flite_info.xml  flitemanager.xml  info.xml  info_item.xml  norm_dict_list_view_item.xml  view_voice_manager.xml  voice_manager_item.xml
app/src/main/res/raw/: abbr_regex_1.csv  abbreviations_general.txt  abbreviations_nonending.txt  head_map.csv  ice_pron_dict_standard_clear_2102.csv  ice_pron_dict_standard_clear_2201_extended.csv  lexicon.txt  lexicon_v2006.txt  lexicon_v2106b.txt  lexicon_v2201.txt  modifier_map.csv  sampa_ipa_single_flite.tsv
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/values-is-rIS/: arrays.xml  strings.xml
app/src/main/res/xml/: network_security_config.xml  tts_engine.xml
app/src/release/: google-services.json
app/src/test/java/com/grammatek/simaromur/: AssetVoiceTest.java  CompoundTreeTest.java  DbVoiceTest.java  ExampleUnitTest.java  FileUtilsTest.java  NormalizationDictionariesTest.java  NormalizationManagerTest.java  SyllabificationTest.java  TTSNormalizerUnitTest.java  TTSUnicodeNormalizerTest.java  TestRoomDbMigration.java  TokenizerTest.java  UnitTestSampleJava.java  VoiceRepoTest.java
app/src/test/resources/: voice_info.json
gradle/wrapper/: gradle-wrapper.properties
scripts/: select_rows.sh
(+39 files in other folders)
